# diet-pandas

./: .flake8  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCS_SETUP.md  Makefile  README.md  RELEASE_NOTES_v0.2.0.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: code-quality.yml  docs.yml  publish.yml  tests.yml
benchmarks/: README.md  enem_benchmark.ipynb  enem_real_benchmark.py  taxi_benchmark.py
benchmarks/results/: enem_results.json  enem_results.md  synthetic_results.md  taxi_results.json  taxi_results.md
docs/: README.md  index.md
docs/about/: changelog.md  contributing.md  license.md
docs/api/: analysis.md  core.md  exceptions.md  io.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: advanced.md  basic-usage.md  file-io.md  memory-reports.md
docs/performance/: benchmarks.md
results/: enem_participants_results.json
scripts/: benchmark.py  demo.py  examples.py  float_to_int_demo.py  quickstart.py
src/dietpandas/: __init__.py  analysis.py  core.py  exceptions.py  io.py  schema.py
tests/: __init__.py  test_analysis.py  test_chunked.py  test_core.py  test_exceptions.py  test_io.py  test_io_new.py  test_new_features.py  test_schema.py
