[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diet-pandas"
version = "0.2.0"
description = "Automated memory optimization for Pandas DataFrames. Same Pandas taste, half the calories (RAM)."
readme = "README.md"
authors = [
  { name = "Luiz Fernando", email = "luizfernando1012000@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "polars>=0.17.0"
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "openpyxl>=3.0.0",
    "pyarrow>=10.0.0",
    "tables>=3.8.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "pymdown-extensions>=10.0.0",
]
excel = [
    "openpyxl>=3.0.0",
]
parquet = [
    "pyarrow>=10.0.0",
]
hdf = [
    "tables>=3.8.0",
]
all = [
    "openpyxl>=3.0.0",
    "pyarrow>=10.0.0",
    "tables>=3.8.0",
]

[project.urls]
"Homepage" = "https://github.com/luiz826/diet-pandas"
"Bug Tracker" = "https://github.com/luiz826/diet-pandas/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".eggs"]
